[package]
name = "unreal-movement"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
unreal-api = { path = "../../unreal-api"}
unreal-reflect = { path = "../../unreal-reflect" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
log = "0.4"

serde = {version = "1", features = ["derive"]}
